--- a/AbrProject/Views/HelloWorld/Index.cshtml
+++ b/AbrProject/Views/HelloWorld/Index.cshtml
@@ -25,7 +25,7 @@
             <input type="submit" value="Analyze" class="btn btn-default" />
 
         </form>
-        @if (Model.Answer != null) { <p>Your keywords: @Model.Answer</p> }
+        @if (Model.Answer != null) { <p>Your keywords: <pre>@Model.Answer</pre></p> }
         @*<p>@Model.Answer.Split()[2]</p>
         <p>@Model.Answer.Split()[3]</p>
         <p>@Model.Answer.Split()[4]</p>
