--- a/AbrProject/Views/HelloWorld/Index.cshtml
+++ b/AbrProject/Views/HelloWorld/Index.cshtml
@@ -25,26 +25,14 @@
             <input type="submit" value="Analyze" class="btn btn-default" />
 
         </form>
-        @if (Model.Answer != null) { <p>Your keywords: <pre>@Model.Answer</pre></p> }
-        @*<p>@Model.Answer.Split()[2]</p>
-        <p>@Model.Answer.Split()[3]</p>
-        <p>@Model.Answer.Split()[4]</p>
-        <p>@Model.Answer.Split()[5]</p>
-        <p>@Model.Answer.Split()[6]</p>*@
-        @*<form asp-action="Post" method="post" enctype="multipart/form-data">
-
-                     <div class="form-group">
-                         <label class="control-label">Your speed</label>
-                         <input class="form-control" />
-                         <span class="text-danger"></span>
-                     </div>
-
-                     <input type="submit" value="Analyze" class="btn btn-default" />
-
-                 </form>
-        <p>Время, потраченное на прочтение текста: @Html.DisplayFor(model => model.Answer2)</p>*@
-
-
-        @*@Html.DisplayFor(model => model.Answer)*@
+        @if (Model.Answer != null)
+        {
+            <p>Your keywords:</p>
+            @foreach (var e in Model.Answer.Split().Where(x => x != string.Empty))
+            {
+                <input type="submit" value="@e" class="btn btn-default" />
+                <output>@Model.Stroka.Split('.').Where(x => x.Contains(e))</output>
+            }
+        }
     </body>
 </html>
