--- a/AbrProject/Views/Shared/_Layout.cshtml
+++ b/AbrProject/Views/Shared/_Layout.cshtml
@@ -16,11 +16,11 @@
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
-    @*<link rel="stylesheet" href="StyleSheet.css" />*@
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header style="color: black">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
+              style="background-color: black">
             <div class="container">
                 <a class="navbar-brand" asp-controller="Movies" asp-action="Index">Text Analyze</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -40,7 +40,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container" style="background: url(IMG_9988.JPG)">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             @RenderBody()
