--- a/AbrProject/wwwroot/css/site.css
+++ b/AbrProject/wwwroot/css/site.css
@@ -41,9 +41,14 @@ html {
   min-height: 100%;
 }
 
+header {
+    background-color: black;
+}
+
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    
+    margin-bottom: 60px;
 }
 .footer {
   position: absolute;
